--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                      <button class="button-color p-3"> <i class="fas fa-shopping-cart text-light"> BUY NOW</i></button>
 
                 </div>
-                <div class="col-md-5" >
+                <div class="col-md-5 pb-5" >
                     <img src="Logo, Icon/crush.png" class="d-block w-100" alt="">
                 </div>
             </div>
