--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           
           </div>
           <div class="col-12">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn button-color text-light">Submit</button>
           </div>
         </form>
       </section>
